--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- This will be the homepage to the project, please keep this clean and create for html files for other sites -->
+
 <!DOCTYPE html>
 <html>
     <head>
