--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
     <body> 
-        <p> Here is a webpage for you caleb! </p>
+        <p> Here is a webpage for you caleb!
+            thanks </p>
     </body>
 </html>
