--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
 <head>
    <meta charset="utf-8">
    <title>
-      Spairl Labs
+      Projects
    </title>
    <style type="text/css">
       body {
@@ -48,7 +48,13 @@
          text-decoration: none;
          border-bottom: 2px blue;
       }
-
+      
+      li.current {
+          background-color: red;
+          color:black;
+          text-decoration: solid;
+      }
+      
       li a:hover,
       .dropdown:hover .dropbtn {
          background-color: blue;
@@ -66,7 +72,6 @@
          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
          z-index: 1;
       }
-
       .dropdown-content a {
          color: black;
          padding: 12px 16px;
@@ -94,6 +99,9 @@
         <li>
            <a href="">Tasks</a>
         </li>
+        <li class="current">
+            <a href="">Project</a>
+         </li>
         <li>
            <a href="">Agenda</a>
         </li>
