--- a/src/tasks.html
+++ b/src/tasks.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Tasks</title>
-    <script src="scripts.js"></script>
+    <script src="scripts/scripts.js"></script>
 </head>
 
 
