Agenda tab html stuff
Probably wont have time to code with java script I will work on it tommorow and also would like feed back on it because its my first time really using html and css so let me know.

--- a/src/agenda.html
+++ b/src/agenda.html
@@ -1,1 +1,70 @@
-<title>Hey</title>
+<!DOCTYPE html>
+<html>
+
+    <!--Remember to change href to css/styles.css-->
+    <head>
+        <link rel="stylesheet" href="css/styles1.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <title>Agenda</title>
+        <script src=""></script>
+    </head>
+
+<!--Agenda Title in nav bar-->
+<body>
+    <div class="navbar" >
+        <a href="index.html">Home</a>
+        <a class ="active" href="agenda.html">Agenda</a>
+        <a href="projects.html">Projects</a>
+        <a href="tasks.html">Tasks</a>
+        <a href="notes.html">Notes</a>
+
+    </div>
+    <form>
+    <div class = "wrapper">
+
+        <div class="box">
+            <h1>Today</h1>
+        </div>
+    <!--Current agenda-->
+        <div class ="main">
+            <label>Name: </label>
+                <input type = "name" name = "Name" value = "Go shopping">
+            <hr>
+            <label>Summary: </label>
+                <textarea name="summary">Go shopping with the boyz.</textarea>
+            <hr>
+                <label>Start Date: </label>
+                    <input type="date" name="start">
+            <hr>
+                <label>End Date: </label>
+                    <input type="date" name="end" value = "today">
+            <hr>
+
+            <button>
+                <a href="UpdateAgent.html">Update</a>
+            </button>
+        </form>
+    </div>
+
+        <div class = "box1">
+            <h1>
+                <a href="AllProjects.html">All Projects</a>
+            </h1>
+        </div>
+
+    <!--Past Projects-->
+        <div class = "box1">
+            <h1>
+                <a href="pastProjects.html">Past Projects</a>
+            </h1>
+        </div>
+        <!--Archive Section-->
+        <div class = "box1">
+            <h1>
+                <a href="Archive.html">Archive</a>
+            </h1>
+        </div>
+    </div>
+</body>
+</html>
