--- a/Calebs Code/notes.html
+++ b/Calebs Code/notes.html
@@ -68,9 +68,9 @@
         <p id="para">      
         </p> -->
 
-        <div class="add-note">
+        <!-- <div class="add-note">
           <a href="#myModal" class="add-note">Add Note</a>
-        </div>
+        </div> -->
         
         <div id="myModal" class="Modal">
           <div class="modal-content">
@@ -83,9 +83,9 @@
               <label for="">Note</label></br>
               <input class="note" type="text"></br>
               <input type="submit">
-              <div class="cancel">
+              <!-- <div class="cancel">
                 <a href="#close" class="cancel-btn">Cancel</a>
-              </div>
+              </div> -->
             </form>
           </div>
         </div>
