--- a/src/index.html
+++ b/src/index.html
@@ -124,21 +124,11 @@
       <div class="main">
 
         <div class="addedItem">
-          <h2>Notes</h2>
+          <h2>Today's Notes</h2>
           <hr>
           <ul id="taskincomplete">
-            <li><input type="checkbox"><label>Go shopping</label><input type="text"></li>
+            <li><label>Go shopping</label><input type="text"></li>
           </ul>
-        </div>
-        <div class="">
-          <h2>Add Note</h2>
-          <hr>
-        </div>
-
-        <input type="text" id="cardtext" name="cardtext" placeholder="E.g: Do Chores">
-
-        <div id="createItem" class="()" onClick="createNewCardItem">
-          + Create Note
         </div>
       </div>
     </div>
