--- a/src/UpdateAgent.html
+++ b/src/UpdateAgent.html
@@ -3,7 +3,7 @@
 
     <!--Remember to change href to css/styles.css-->
     <head>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/stylesAgenda.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <title>UpdateAgenda</title>
