--- a/src/agenda.html
+++ b/src/agenda.html
@@ -20,6 +20,10 @@
               outline: none;
               font-size: 15px;
             }
+
+            .tonyisass{
+                
+            }
             
             .active, .collapsible:hover {
               background-color: #555;
