--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,17 @@
 
     </div>
 
+    <p id="greeting">
+      Hello! Today is:
+    </p>
+
+    <p><span id="datetime"></span></p>
+
+    <script>
+      var dt = new Date();
+      document.getElementById("datetime").innerHTML = (("0" + (dt.getMonth() + 1)).slice(-2)) + "/" + (("0" + dt.getDate()).slice(-2)) + "/" + (dt.getFullYear()) + " " + (("0" + dt.getHours() + 1).slice(-2)) + ":" + (("0" + dt.getMinutes() + 1).slice(-2));
+    </script>
+
     <!--task card-->
     <div class="wrapper" id="taskCard">
 
@@ -64,18 +75,6 @@
         <div class="subtitle">
           <h2>Today:</h2>
           <hr>
-        </div>
-
-        <div class="addedItem">
-          <ul id="taskincomplete">
-            <li><label>Dinner w/ John @5PM</label><input type="text"></li>
-          </ul>
-        </div>
-
-        <div class="completeditem">
-          <ul id="taskcomplete">
-            <li><label>Meeting w/ Jane @10AM</label><input type="text"></li>
-          </ul>
         </div>
       </div>
     </div>
