--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,14 @@
   <div>
     <!-- navbar -->
     <div class="navbar">
-      <a class="active" href="index.html">Home</a>
+      <a class="active" href="index.html">Task Master</a>
       <a href="agenda.html">Agenda</a>
       <a href="projects.html">Projects</a>
       <a href="tasks.html">Tasks</a>
       <a href="notes.html">Notes</a>
 
     </div>
-
+    
     <p id="greeting">
       Hello! Today is:
     </p>
@@ -48,15 +48,7 @@
             <h2>Current item</h2>
             <hr>
             <ul id="taskincomplete">
-              <li><input type="checkbox"><label>Go shopping</label><input type="text"></li>
-            </ul>
-          </div>
-
-          <div class="completeditem">
-            <h2>Completed item</h2>
-            <hr>
-            <ul id="taskcomplete">
-              <li><input type="checkbox" checked><label>Go for walk</label><input type="text"></li>
+              <li><input type="checkbox"><label>Go to the moon.</label><input type="text"></li>
             </ul>
           </div>
         </div>
@@ -76,6 +68,18 @@
           <h2>Today:</h2>
           <hr>
         </div>
+
+        <div class="addedItem">
+          <ul id="taskincomplete">
+            <li><label>Meeting w/ Buzz @2PM</label><input type="text"></li>
+          </ul>
+        </div>
+
+        <div class="completeditem">
+          <ul id="taskcomplete">
+            <li><label>Meeting w/ Michael @10AM</label><input type="text"></li>
+          </ul>
+        </div>
       </div>
     </div>
     <!--agenda card end-->
@@ -93,7 +97,7 @@
           <h2>Current Projects</h2>
           <hr>
           <ul id="taskincomplete">
-            <li><label>Apollo Project</label><input type="text"></li>
+            <li><label>Apollo 11 Project</label><input type="text"></li>
           </ul>
         </div>
 
@@ -114,7 +118,8 @@
           <h2>Today's Notes</h2>
           <hr>
           <ul id="taskincomplete">
-            <li><label>Go shopping</label><input type="text"></li>
+            <li><label>Don't Forget</label><input type="text"><p>"Don't forget flag for moon landing."</p></li>
+            <li><label>Catch Phrase ideas</label><input type="text"><p>"One small step for man. One giant leap for mankind."</p></li>
           </ul>
         </div>
       </div>
@@ -122,8 +127,8 @@
     <!--notes card end-->
 
     <!-- Footer -->
-    <footer class="">
-
+    <footer>
+<!-- <p>brought to you by our viewers like you... Thank you!</p> -->
     </footer>
 
 </body>
