--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,17 @@
       document.getElementById("datetime").innerHTML = (("0" + (dt.getMonth() + 1)).slice(-2)) + "/" + (("0" + dt.getDate()).slice(-2)) + "/" + (dt.getFullYear()) + " " + (("0" + dt.getHours() + 1).slice(-2)) + ":" + (("0" + dt.getMinutes() + 1).slice(-2));
     </script>
 
+    <p id="greeting">
+      Hello! Today is:
+    </p>
+
+    <p><span id="datetime"></span></p>
+
+    <script>
+      var dt = new Date();
+      document.getElementById("datetime").innerHTML = (("0" + (dt.getMonth() + 1)).slice(-2)) + "/" + (("0" + dt.getDate()).slice(-2)) + "/" + (dt.getFullYear()) + " " + (("0" + dt.getHours() + 1).slice(-2)) + ":" + (("0" + dt.getMinutes() + 1).slice(-2));
+    </script>
+
     <!--task card-->
     <div class="wrapper" id="taskCard">
 
