added organizing comments

--- a/src/index.html
+++ b/src/index.html
@@ -23,16 +23,22 @@
 
     </div>
 
+    <!-- greeting -->
     <p id="greeting">
       Hello! Today is:
     </p>
+    <!-- greeting end -->
 
-    <p><span id="date-time"></span></p>
+    <!-- time/date -->
+    <p>
+      <span id="date-time"></span>
+    </p>
 
     <script>
       var dt = new Date();
       document.getElementById('date-time').innerHTML=dt;
     </script>
+    <!-- time/date end-->
 
     <!--task card-->
     <div class="wrapper" id="taskCard">
