fixing expand button

--- a/src/projects.html
+++ b/src/projects.html
@@ -105,17 +105,17 @@
 
                   var coll = document.getElementsByClassName("collapsible");
 
-                  for (let i = 0; i < coll.length; i++) {
-                    coll[i].addEventListener("click", function () {
-                      this.classList.toggle("active");
-                      var content = this.nextElementSibling;
-                      if (content.style.display == "block") {
-                        content.style.display = "none";
-                      } else {
-                        content.style.display = "block";
-                      }
-                    });
-                  }
+                  // for (let i = 0; i < coll.length; i++) {
+                  //   coll[i].addEventListener("click", function () {
+                  //     this.classList.toggle("active");
+                  //     var content = this.nextElementSibling;
+                  //     if (content.style.display == "block") {
+                  //       content.style.display = "none";
+                  //     } else {
+                  //       content.style.display = "block";
+                  //     }
+                  //   });
+                  // }
                 }
                 if (todayDate<projStart) {
                   const myDiv = document.createElement('div');
@@ -147,18 +147,18 @@
 
                   var coll = document.getElementsByClassName("collapsible");
 
-                  for (let i = 0; i < coll.length; i++) {
-                    coll[i].addEventListener("click", function () {
-                      this.classList.toggle("active");
-                      var content = this.nextElementSibling;
-                      if (content.style.display == "block") {
-                        content.style.display = "none";
-                      } else {
-                        content.style.display = "block";
-                      }
-                    });
-                  }
-                }
+                //   for (let i = 0; i < coll.length; i++) {
+                //     coll[i].addEventListener("click", function () {
+                //       this.classList.toggle("active");
+                //       var content = this.nextElementSibling;
+                //       if (content.style.display == "block") {
+                //         content.style.display = "none";
+                //       } else {
+                //         content.style.display = "block";
+                //       }
+                //     });
+                //   }
+                 }
                 if (todayDate>projEnd) {
                   const myDiv = document.createElement('div');
                   const contentDiv = document.createElement('div');
@@ -189,6 +189,20 @@
 
                   var coll = document.getElementsByClassName("collapsible");
 
+                  // for (let i = 0; i < coll.length; i++) {
+                  //   coll[i].addEventListener("click", function () {
+                  //     this.classList.toggle("active");
+                  //     var content = this.nextElementSibling;
+                  //     if (content.style.display == "block") {
+                  //       content.style.display = "none";
+                  //     } else {
+                  //       content.style.display = "block";
+                  //     }
+                  //   });
+                  // }
+               // }
+              }
+            }
                   for (let i = 0; i < coll.length; i++) {
                     coll[i].addEventListener("click", function () {
                       this.classList.toggle("active");
@@ -201,8 +215,8 @@
                     });
                   }
                 }
-              }
-            }
+
+            
           </script>
         </section>
 </body>
