--- a/src/index.html
+++ b/src/index.html
@@ -146,6 +146,8 @@
                     const expButton = document.createElement('button');
                     const subList = document.createElement('ul');
 
+                    var coll = document.getElementsByClassName("collapsible");
+
                     contentDiv.className = "content";
                     expButton.className = "collapsible";
                     expButton.setAttribute("type", "button");
@@ -171,6 +173,17 @@
 
                   }
               }
+              for (let i = 0; i < coll.length; i++) {
+                    coll[i].addEventListener("click", function () {
+                      this.classList.toggle("active");
+                      var content = this.nextElementSibling;
+                      if (content.style.display == "block") {
+                        content.style.display = "none";
+                      } else {
+                        content.style.display = "block";
+                      }
+                    });
+                  }
             }
           </script>
         </section>
