--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <div class="wrapper" id="taskCard">
 
       <div class="box">
-        <h1>Tasks</h1>
+        <h1><a href="tasks.html" class="sectionLinks">Tasks</a></h1>
       </div>
       <div class="main">
         <div class="subtitle">
@@ -65,7 +65,7 @@
   <div class="wrapper" id="agendaCard">
 
     <div class="box">
-      <h1>Agenda</h1>
+      <h1><a href="agenda.html" class="sectionLinks">Agenda</a></h1>
     </div>
 
     <div class="main">
@@ -94,7 +94,7 @@
     <div class="wrapper">
 
       <div class="box">
-        <h1>Project Manager</h1>
+        <h1><a href="projects.html" class="sectionLinks">Projects</a></h1>
       </div>
 
       <div class="main">
@@ -192,7 +192,7 @@
   <div class="wrapper" id="noteCard">
 
     <div class="box">
-      <h1>Notes</h1>
+      <h1><a href="notes.html" class="sectionLinks">Notes</a></h1>
     </div>
 
     <div class="main">
