--- a/src/index.html
+++ b/src/index.html
@@ -102,9 +102,10 @@
 
           <script>
 
+
             var projects;
             const section = document.querySelector('section');
-            document.getElementById("projSection").onload = function () { populateProjectList() };
+            document.getElementById("mySection").onload = function () { populateProjectList() };
             let requestURL = 'https://raw.githubusercontent.com/Armagregon15/Armagregon.github.io/master/project.json';
             let request = new XMLHttpRequest();
             request.open('GET', requestURL, true);
@@ -115,11 +116,14 @@
               const response = request.response;
               console.log(response['projects'][0]['PName']);
               populateProjectList(response);
+
             }
+
+
 
             function populateProjectList(response) {
 
-              for (let i = 0; i < 3; i++) {
+              for (let i = 0; i < 4; i++) {
                 var todayDate = new Date();
 
                 var projEnd = new Date(response['projects'][i]['ey'], response['projects'][i]['em'], response['projects'][i]['ed']);
@@ -140,19 +144,25 @@
                     const liEnd = document.createElement('li');
                     const myList = document.createElement('ul');
                     const expButton = document.createElement('button');
-                    const subList = document.createElement('ul');
 
-                    var coll = document.getElementsByClassName("collapsible");
+                    const subList = document.createElement('ul');
+                    const aNotes = document.createElement('a');
+                    const aAgenda = document.createElement('a');
+                    const aTask = document.createElement('a');
 
                     contentDiv.className = "content";
                     expButton.className = "collapsible";
                     expButton.setAttribute("type", "button");
                     expButton.textContent = '+';
+
+                    aAgenda.href = "agenda.html";
+                    aNotes.href = "notes.html";
+                    aTask.href = "tasks.html";
                     liName.textContent = response['projects'][i]['PName'];
                     liStart.textContent = 'Start: ' + response['projects'][i]['Start'];
-                    liNotes.textContent = 'Notes: ' + response['projects'][i]['NumNotes'];
-                    liAgenda.textContent = 'Agendas: ' + response['projects'][i]['NumAgenda'];
-                    liTask.textContent = 'Tasks: ' + response['projects'][i]['NumTasks'];
+                    aNotes.textContent = 'Notes: ' + response['projects'][i]['NumNotes'];
+                    aAgenda.textContent = 'Agendas: ' + response['projects'][i]['NumAgenda'];
+                    aTask.textContent = 'Tasks: ' + response['projects'][i]['NumTasks'];
                     liEnd.textContent = 'End: ' + response['projects'][i]['End'];
 
                     section.appendChild(myDiv);
@@ -162,11 +172,16 @@
                     liName.appendChild(contentDiv);
                     contentDiv.appendChild(subList);
                     subList.appendChild(liStart);
+
                     subList.appendChild(liNotes);
+                    liNotes.appendChild(aNotes);
                     subList.appendChild(liAgenda);
+                    liAgenda.appendChild(aAgenda);
                     subList.appendChild(liTask);
+                    liTask.appendChild(aTask);
                     subList.appendChild(liEnd);
 
+                    var coll = document.getElementsByClassName("collapsible");
                   }
               }
               for (let i = 0; i < coll.length; i++) {
