--- a/src/agenda.html
+++ b/src/agenda.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/stylesAgenda.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <title>Agenda</title>
+        <title>Task Master</title>
         <script src="scripts/scripts.js"></script>
         <style>
             .collapsible {
@@ -41,7 +41,7 @@
 <!--Agenda Title in nav bar-->
 <body>
     <div class="navbar" >
-        <a href="index.html">Home</a>
+        <a href="index.html">Task Master</a>
         <a class ="active" href="agenda.html">Agenda</a>
         <a href="projects.html">Projects</a>
         <a href="tasks.html">Tasks</a>
