--- a/src/notes.html
+++ b/src/notes.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/styles2.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Notes</title>
+    <title>Task Master</title>
     <script>
     $(document).ready(function () {
       all_notes = $("li a");
@@ -44,7 +44,7 @@
 <!-- Navbar -->
 <div>
     <div class="navbar" >
-        <a href="index.html">Home</a>
+        <a href="index.html">Task Master</a>
         <a href="agenda.html">Agenda</a>
         <a href="projects.html">Projects</a>
         <a href="tasks.html">Tasks</a>
