--- a/src/tasks.html
+++ b/src/tasks.html
@@ -8,7 +8,7 @@
     	<script src=
         "https://code.jquery.com/jquery-3.5.1.js">
 	  </script>
-    <title>Tasks</title>
+    <title>Task Master</title>
 
 </head>
 
@@ -17,7 +17,7 @@
 <!-- Navbar -->
 <div>
     <div class="navbar" >
-        <a href="index.html">Home</a>
+        <a href="index.html">Task Master</a>
         <a href="agenda.html">Agenda</a>
         <a href="projects.html">Projects</a>
         <a class="active" href="tasks.html">Tasks</a>
