--- a/src/projects.html
+++ b/src/projects.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Projects</title>
+  <title>Task Master</title>
   <link rel="stylesheet" href="css/projects.css">
 </head>
 
 <body>
   <div>
     <div class="navbar">
-      <a href="index.html">Home</a>
+      <a href="index.html">Task Master</a>
       <a href="agenda.html">Agenda</a>
       <a class="active" href="projects.html">Projects</a>
       <a href="tasks.html">Tasks</a>
