fixed projects on home

--- a/src/index.html
+++ b/src/index.html
@@ -144,8 +144,8 @@
                     const aAgenda = document.createElement('a');
                     const aTask = document.createElement('a');
 
-                    contentDiv.className = "content";
-                    expButton.className = "collapsible";
+                    contentDiv.className = "projcontent";
+                    expButton.className = "projcollapsible";
                     expButton.setAttribute("type", "button");
                     expButton.textContent = '+';
 
@@ -175,7 +175,7 @@
                     liTask.appendChild(aTask);
                     subList.appendChild(liEnd);
 
-                    var coll = document.getElementsByClassName("collapsible");
+                    var coll = document.getElementsByClassName("projcollapsible");
 
 
                     }
